# speedy

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.example.timetable  docker-compose.yml  rust-toolchain.toml  speedy.service
src/: cli.rs  influxdb.rs  iperf3.rs  main.rs  models.rs  timetable.rs
